chore: Initial daf setup

--- a/locales/en.json
+++ b/locales/en.json
@@ -85,6 +85,9 @@
 		"or": "OR",
 		"import_from_seed_button": "Import using seed phrase"
 	},
+	"credentials": {
+		"title": "Credentials"
+	},
 	"login": {
 		"title": "Welcome Back!",
 		"password": "Password",
